--- a/features/onboarding/src/main/res/values/strings.xml
+++ b/features/onboarding/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="explore">Explore</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pref_desc">Hi There!\n choose one you like</string>
 </resources>
