--- a/features/job_details/src/main/res/values/strings.xml
+++ b/features/job_details/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="navigate_back">Navigate back</string>
     <string name="job_description">Job Description</string>
+    <string name="apply">Apply</string>
 </resources>
